Run LFM2.5-1.2B-Instruct: both formats, and llama.cpp byte for byte
The gated short-conv model reads from its BF16 safetensors and from Liquid's own
BF16 GGUF and answers with the same tokens from both, in -m chat and in plain
continuation. llama.cpp on that GGUF at temperature 0 prints the SAME BYTES over
the whole 155-token overlap -- a fact, not a rule: one model, one prompt, and not
the Q8_0 byte-identity check .todo/672 owes. The Q8_0 file is still refused by
name at token_embd.weight.

Everything written for this model on 2026-09-03 without a file to try it on held:
the lfm2 row, :layer-types, operator_norm / ffn_norm / embedding_norm,
feed_forward.w1/w2/w3, self_attn.out_proj, the q_layernorm / k_layernorm names,
the 8192 FFN width, the GGUF head_count_kv zero array as :shortconv, and
shortconv.lisp itself.

One thing did not. LFM2.5's GGUF writes tokenizer.ggml.pre = "lfm2" -- a family
naming after itself a shape it merely shares -- and %normalize-kind knew only
"llama3" and "llama-bpe", so the model did not load at all. Its tokenizer.json
holds the Llama 3 pattern character for character and llama.cpp maps the name the
same way, beside "llama-v3", which goes in with it. What made this one invisible
is that .kb/tokenizers.md and both doc trees already SAID ":llama3 (Llama 3,
LFM2.5)": the shape was implemented and documented as covering the model, and only
the alias string was missing. It was reachable through the GGUF alone, since the
safetensors path reads the pattern itself and never consults an alias.

The tok/s rows are not here: two lanes measuring --parallel on one box destroy
each other's numbers, so they wait for an exclusive window. What that window
should also settle is written into the item -- .todo/670's "two independent models
on one ceiling" may be a per-model figure rather than a box one.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01EYZ5gxzjRmr6SW3WweyS8D